i18n: page titles; collection shortcut; string removals

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -8,7 +8,6 @@
   "Show more": "Show more",
   "Show Less": "Show Less",
   "Show less": "Show less",
-  "LBRY": "LBRY",
   "Account": "Account",
   "Overview": "Overview",
   "Wallet": "Wallet",
@@ -457,6 +456,7 @@
   "log in": "log in",
   "Go Back": "Go Back",
   "Terms of Service": "Terms of Service",
+  "YouTube Sync Terms of Service": "YouTube Sync Terms of Service",
   "Learn More": "Learn More",
   "Learn more": "Learn more",
   "Community": "Community",
@@ -481,8 +481,6 @@
   "Verify Via Text": "Verify Via Text",
   "Verify via credit card": "Verify via credit card",
   "Verify via chat": "Verify via chat",
-  "We're friendly. We promise.": "We're friendly. We promise.",
-  "No channels created yet": "No channels created yet",
   "Create a Channel": "Create a Channel",
   "Unsave Password": "Unsave Password",
   "Clear saved password": "Clear saved password",
@@ -681,8 +679,6 @@
   "You need more Credits to purchase this.": "You need more Credits to purchase this.",
   "Open Rewards": "Open Rewards",
   "Read our %referral_faq_link% to learn more about rewards.": "Read our %referral_faq_link% to learn more about rewards.",
-  "Tags Selected": "Tags Selected",
-  "After submitting, you will not see the changes immediately. Please check back in a few minutes.": "After submitting, you will not see the changes immediately. Please check back in a few minutes.",
   "You already have a claim with this name.": "You already have a claim with this name.",
   "There was an error. Try %refreshing_the_app_link% to fix it. If that doesn't work, try pressing Ctrl+R/Cmd+R.": "There was an error. Try %refreshing_the_app_link% to fix it. If that doesn't work, try pressing Ctrl+R/Cmd+R.",
   "You are not currently sharing diagnostic data so this error was not reported.": "You are not currently sharing diagnostic data so this error was not reported.",
@@ -730,11 +726,7 @@
   "Transcoding": "Transcoding",
   "Optimize and transcode video": "Optimize and transcode video",
   "Known Tags": "Known Tags",
-  "Almost there": "Almost there",
   "More Channels": "More Channels",
-  "View top claims for %normalized_uri%": "View top claims for %normalized_uri%",
-  "view all claims": "view all claims",
-  "Top claims at lbry://%name%": "Top claims at lbry://%name%",
   "Last Updated": "Last Updated",
   "Staked Credits": "Staked Credits",
   "Are you sure? Type %name% to confirm that you wish to remove the channel.": "Are you sure? Type %name% to confirm that you wish to remove the channel.",
@@ -808,7 +800,6 @@
   "Your content will do better with more staked on it": "Your content will do better with more staked on it",
   "She's about to close up the library!": "She's about to close up the library!",
   "Community Choice?": "Community Choice?",
-  "Download to your Library": "Download to your Library",
   "Leave a Comment": "Leave a Comment",
   "Open Live Chat": "Open Live Chat",
   "%view_count% viewers": "%view_count% viewers",
@@ -1288,25 +1279,21 @@
   "%comment_count% comments - %comment_count_change% this week": "%comment_count% comments - %comment_count_change% this week",
   "Invite": "Invite",
   "Remove File": "Remove File",
-  "The Rabbit Hole": "The Rabbit Hole",
-  "Cheese": "Cheese",
-  "Cooking": "Cooking",
   "Education": "Education",
   "Enlightenment": "Enlightenment",
   "Featured": "Featured",
-  "Gaming": "Gaming",
+  "Finance 2.0": "Finance 2.0",
   "Game": "Game",
+  "Gaming": "Gaming",
   "Lab": "Lab",
-  "The Arts": "The Arts",
-  "Tech": "Tech",
-  "Technology": "Technology",
   "Movies": "Movies",
   "Music": "Music",
-  "Jams": "Jams",
-  "News": "News",
   "News & Politics": "News & Politics",
+  "News": "News",
   "Pop Culture": "Pop Culture",
-  "Finance 2.0": "Finance 2.0",
+  "Tech": "Tech",
+  "Technology": "Technology",
+  "The Arts": "The Arts",
   "Universe": "Universe",
   "Wild West": "Wild West",
   "View More": "View More",
@@ -1742,15 +1729,19 @@
   "People who view this link will be redirected to your livestream. Make sure to use this for sharing so your title and thumbnail are displayed properly.": "People who view this link will be redirected to your livestream. Make sure to use this for sharing so your title and thumbnail are displayed properly.",
   "View livestream": "View livestream",
   "You need to upload your livestream details before you can go live. Please note: Replays must be published manually after your stream via the Update button on the livestream.": "You need to upload your livestream details before you can go live. Please note: Replays must be published manually after your stream via the Update button on the livestream.",
+  "To stream on Odysee, please join Odysee Premium or have 50 Credits as support on your channel": "To stream on Odysee, please join Odysee Premium or have 50 Credits as support on your channel",
+  "Join Odysee Premium": "Join Odysee Premium",
   "Create A Livestream": "Create A Livestream",
+  "Go Live on Odysee": "Go Live on Odysee",
+  "Expand to learn more about setting up a livestream.": "Expand to learn more about setting up a livestream.",
   "Create a Livestream by first submitting your livestream details and waiting for approval confirmation. This can be done well in advance and will take a few minutes.": "Create a Livestream by first submitting your livestream details and waiting for approval confirmation. This can be done well in advance and will take a few minutes.",
-  "The livestream will not be visible on your channel page until you are live, but you can share the URL in advance.": "The livestream will not be visible on your channel page until you are live, but you can share the URL in advance.",
+  "Scheduled livestreams will appear at the top of your channel page and for your followers. Regular livestreams will only appear once you are actually live.": "Scheduled livestreams will appear at the top of your channel page and for your followers. Regular livestreams will only appear once you are actually live.",
   "Once the your livestream is confirmed, configure your streaming software (OBS, Restream, etc) and input the server URL along with the stream key in it.": "Once the your livestream is confirmed, configure your streaming software (OBS, Restream, etc) and input the server URL along with the stream key in it.",
   "To ensure the best streaming experience with OBS, open settings -> output": "To ensure the best streaming experience with OBS, open settings -> output",
   "Select advanced mode from the dropdown at the top.": "Select advanced mode from the dropdown at the top.",
   "Ensure the following settings are selected under the streaming tab:": "Ensure the following settings are selected under the streaming tab:",
   "Bitrate: 1000 to 2500 kbps": "Bitrate: 1000 to 2500 kbps",
-  "Keyframes: 2": "Keyframes: 2",
+  "Keyframes: 1": "Keyframes: 1",
   "Profile: High": "Profile: High",
   "Tune: Zerolatency": "Tune: Zerolatency",
   "If using other streaming software, make sure the bitrate is below 4500 kbps or the stream will not work.": "If using other streaming software, make sure the bitrate is below 4500 kbps or the stream will not work.",
@@ -1764,8 +1755,6 @@
   "Prepare an upcoming livestream": "Prepare an upcoming livestream",
   "Edit your post": "Edit your post",
   "Update your content": "Update your content",
-  "Go Live on Odysee": "Go Live on Odysee",
-  "You're invited to try out our new livestreaming service while in beta!": "You're invited to try out our new livestreaming service while in beta!",
   "Swap": "Swap",
   "Swap Crypto": "Swap Crypto",
   "Enter desired %lbc%": "Enter desired %lbc%",
@@ -1978,15 +1967,13 @@
   "List is Empty": "List is Empty",
   "Confirm List Unpublish": "Confirm List Unpublish",
   "This will permanently delete the list.": "This will permanently delete the list.",
-  "Everyone starts with 2 private lists - Watch Later and Favorites.": "Everyone starts with 2 private lists - Watch Later and Favorites.",
-  "Add content to existing lists or new lists from content pages or content previews.": "Add content to existing lists or new lists from content pages or content previews.",
-  "By default, lists are private. You can edit them and later publish them from the Lists page or the Publish context menu on this page. Similar to uploads, small blockchain fees apply.": "By default, lists are private. You can edit them and later publish them from the Lists page or the Publish context menu on this page. Similar to uploads, small blockchain fees apply.",
   "Chat": "Chat",
   "Tipped": "Tipped",
   "Fromage": "Fromage",
   "In Favorites": "In Favorites",
   "In Watch Later": "In Watch Later",
-  "In %lastCollectionName%": "In %lastCollectionName%",
+  "Add to %collection%": "Add to %collection%",
+  "In %collection%": "In %collection%",
   "Remove from Watch Later": "Remove from Watch Later",
   "Add to Watch Later": "Add to Watch Later",
   "Added": "Added",
@@ -2141,7 +2128,6 @@
   "Did someone invite you to use Odysee? Tell us who and you both get a reward!": "Did someone invite you to use Odysee? Tell us who and you both get a reward!",
   "There are unsaved settings. Exit the Settings Page to finalize them.": "There are unsaved settings. Exit the Settings Page to finalize them.",
   "For streaming from your mobile device, we recommend PRISM Live Studio from the app store.": "For streaming from your mobile device, we recommend PRISM Live Studio from the app store.",
-  "Scheduled livestreams will appear at the top of your channel page and for your followers. Regular livestreams will only appear once you are actually live.": "Scheduled livestreams will appear at the top of your channel page and for your followers. Regular livestreams will only appear once you are actually live.",
   "Confirmation process takes a few minutes, but then you can go live anytime. The stream is not shown anywhere until you are broadcasting.": "Confirmation process takes a few minutes, but then you can go live anytime. The stream is not shown anywhere until you are broadcasting.",
   "Your scheduled streams will appear on your channel page and for your followers. Chat will not be active until 5 minutes before the start time.": "Your scheduled streams will appear on your channel page and for your followers. Chat will not be active until 5 minutes before the start time.",
   "Update or Publish Replay": "Update or Publish Replay",
@@ -2194,7 +2180,7 @@
   "Search results are being filtered by language. Click here to change the setting.": "Search results are being filtered by language. Click here to change the setting.",
   "Content unavailable": "Content unavailable",
   "There are language translations available for your location! Do you want to switch from English?": "There are language translations available for your location! Do you want to switch from English?",
-  "A homepage and language translations are available for your location! Do you want to switch?": "A homepage and language translations are available for your location! Do you want to switch?",
+  "Homepage and language translations are available for your location! Do you want to switch?": "Homepage and language translations are available for your location! Do you want to switch?",
   "A homepage is available for your location! Do you want to switch?": "A homepage is available for your location! Do you want to switch?",
   "Switch Now": "Switch Now",
   "Both": "Both",
@@ -2203,6 +2189,7 @@
   "Choose Your Preference": "Choose Your Preference",
   "Recently Active": "Recently Active",
   "All Channels": "All Channels",
+  "Recommended Videos (Alpha)": "Recommended Videos (Alpha)",
   "# Recommended Videos - Alpha version available to Odysee Premium users\n  ## What is this?\n  Our content catalog is growing fast. Each day, there are more creators using the platform. This is great news! But it also makes finding things you would like to watch harder. Odysee's recommended videos tries to make it easier.\n\n  ## How does it work?\n  Based on your video viewing history, Odysee tries to find other channels you might like. Then, we recommend videos from those channels. At least, that's how it works right now. But expect a lot of rapid change.\n\n  ## Does Odysee manipulate the results?\n  No. The current algorithm itself has a tendency to favor channels with more viewers. But this is just because we have more evidence for those ones. Otherwise, we aren't making editorial decisions or picking favorites.\n\n  ## My results suck, wtf?\n  The more videos you watch, the better it should be. But this system is brand new and it will take a bit of time to tune it. Please have patience. Or, if you want to complain or suggest something, please email: mailto:recommendations@odysee.com\n\n  ## Why don't I have any recommendations?\n  Right now, it's a Premium feature. But you also might not be using Odysee enough. It's hard to make recommendations without knowing much about you. Otherwise, if you use uBlock Origin or Brave, make sure they are disabled on Odysee, as they interfere with us learning what you like.": "# Recommended Videos - Alpha version available to Odysee Premium users\n  ## What is this?\n  Our content catalog is growing fast. Each day, there are more creators using the platform. This is great news! But it also makes finding things you would like to watch harder. Odysee's recommended videos tries to make it easier.\n\n  ## How does it work?\n  Based on your video viewing history, Odysee tries to find other channels you might like. Then, we recommend videos from those channels. At least, that's how it works right now. But expect a lot of rapid change.\n\n  ## Does Odysee manipulate the results?\n  No. The current algorithm itself has a tendency to favor channels with more viewers. But this is just because we have more evidence for those ones. Otherwise, we aren't making editorial decisions or picking favorites.\n\n  ## My results suck, wtf?\n  The more videos you watch, the better it should be. But this system is brand new and it will take a bit of time to tune it. Please have patience. Or, if you want to complain or suggest something, please email: mailto:recommendations@odysee.com\n\n  ## Why don't I have any recommendations?\n  Right now, it's a Premium feature. But you also might not be using Odysee enough. It's hard to make recommendations without knowing much about you. Otherwise, if you use uBlock Origin or Brave, make sure they are disabled on Odysee, as they interfere with us learning what you like.",
   "Odysee Premium": "Odysee Premium",
   "Get Odysee Premium+": "Get Odysee Premium+",
