--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1281,6 +1281,7 @@
   "%comment_count% comments - %comment_count_change% this week": "%comment_count% comments - %comment_count_change% this week",
   "Invite": "Invite",
   "Remove File": "Remove File",
+  "Artists": "Artists",
   "Education": "Education",
   "Enlightenment": "Enlightenment",
   "Featured": "Featured",
