Load gifs through proxy
Continuation of 1009 (2eae20f0)

It can probably be handled inside the existing getThumbnailCdnUrl to reduce 1 function, but since the functionality is somewhat different (the proxy doesn't compress), it's probably clearer to separate it.

--- a/.env.defaults
+++ b/.env.defaults
@@ -17,6 +17,7 @@ SEARCH_SERVER_API=https://lighthouse.odysee.tv/search
 SOCKETY_SERVER_API=wss://sockety.odysee.com/ws
 RECSYS_ENDPOINT=https://recsys.odysee.tv/v1/lvv
 RECSYS_FYP_ENDPOINT=https://recsys.odysee.tv/v1/u
+IMAGE_PROXY_URL=https://boost.vanwanet.com/index.php
 THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
 THUMBNAIL_CARDS_CDN_URL=https://cards.odycdn.com/
 LOCALE_API=https://api.odysee.com/legal/requirements
@@ -59,7 +60,7 @@ LOGO_WHITE_TEXT=https://thumbnails.odycdn.com/optimize/s:1000:300/quality:85/pla
 LOGO_DARK_TEXT=https://thumbnails.odycdn.com/optimize/s:1000:300/quality:85/plain/https://spee.ch/odysee-png:2.png
 AVATAR_DEFAULT=https://thumbnails.odycdn.com/optimize/s:160:160/quality:85/plain/https://spee.ch/spaceman-png:2.png
 MISSING_THUMB_DEFAULT=https://thumbnails.odycdn.com/optimize/s:390:220/quality:85/plain/https://spee.ch/missing-thumb-png
-FAVICON=https://thumbnails.odycdn.com/optimize/s:100:100/quality:85/plain/https://spee.ch/favicon-png:c.png
+FAVICON=https://odysee.com/public/favicon-spaceman.png
 
 # LOCALE
 DEFAULT_LANGUAGE=en
