--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2147,7 +2147,7 @@
   "You will not see scheduled livestreams by people you follow on the home or following page.": "You will not see scheduled livestreams by people you follow on the home or following page.",
   "Scheduled streams hidden, you can re-enable them in settings.": "Scheduled streams hidden, you can re-enable them in settings.",
   "Hide Personal Recommendations": "Hide Personal Recommendations",
-  "Recommendations hidden; you can re-enable them in Settings.": "Recommendations hidden; you can re-enable them in Settings.",
+  "Clean as a whistle! --[title for empty homepage]--": "Clean as a whistle!",
   "You will not see the personal recommendations in the homepage.": "You will not see the personal recommendations in the homepage.",
   "Sorry, the service is currently unavailable.": "Sorry, the service is currently unavailable.",
   "Started %time_date%": "Started %time_date%",
