Remove hideFyp setting

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2146,9 +2146,13 @@
   "Hide Scheduled Livestreams": "Hide Scheduled Livestreams",
   "You will not see scheduled livestreams by people you follow on the home or following page.": "You will not see scheduled livestreams by people you follow on the home or following page.",
   "Scheduled streams hidden, you can re-enable them in settings.": "Scheduled streams hidden, you can re-enable them in settings.",
-  "Hide Personal Recommendations": "Hide Personal Recommendations",
+  "Customize Homepage": "Customize Homepage",
+  "Customize --[Short label for \"Customize Homepage\"]--": "Customize",
+  "Sort and customize your homepage": "Sort and customize your homepage",
   "Clean as a whistle! --[title for empty homepage]--": "Clean as a whistle!",
-  "You will not see the personal recommendations in the homepage.": "You will not see the personal recommendations in the homepage.",
+  "Hidden": "Hidden",
+  "Premium membership required. Become a member, or %learn_more%.": "Premium membership required. Become a member, or %learn_more%.",
+  "No recommendations available at the moment. %learn_more%": "No recommendations available at the moment. %learn_more%",
   "Sorry, the service is currently unavailable.": "Sorry, the service is currently unavailable.",
   "Started %time_date%": "Started %time_date%",
   "Live %time_date%": "Live %time_date%",
@@ -2158,6 +2162,7 @@
   "Pinned": "Pinned",
   "Remove all unavailable claims": "Remove all unavailable claims",
   "Recommended For You": "Recommended For You",
+  "Recommended": "Recommended",
   "Recommendation removed. Thanks for the feedback!": "Recommendation removed. Thanks for the feedback!",
   "Hide Chat": "Hide Chat",
   "Popout Chat": "Popout Chat",
