Fix i18n issues reported
- Changed to "Add a Card" to reuse existing string.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -601,6 +601,7 @@
   "RSS URL copied.": "RSS URL copied.",
   "Failed to copy RSS URL.": "Failed to copy RSS URL.",
   "Text copied": "Text copied",
+  "Embed link copied": "Embed link copied",
   "Wallet server": "Wallet server",
   "Wallet servers are used to relay data to and from the LBRY blockchain. They also determine what content shows in trending or is blocked. %learn_more%": "Wallet servers are used to relay data to and from the LBRY blockchain. They also determine what content shows in trending or is blocked. %learn_more%",
   "Your Tags": "Your Tags",
@@ -927,6 +928,9 @@
   "in %duration% seconds": "in %duration% seconds",
   "in %duration% second": "in %duration% second",
   "in a few seconds": "in %duration% second",
+  "in a week": "in a week",
+  "in a month": "in a month",
+  "in a year": "in a year",
   "Just now": "Just now",
   "Message received! Thanks for helping.": "Message received! Thanks for helping.",
   "Report an issue or request a feature": "Report an issue or request a feature",
@@ -1409,10 +1413,9 @@
   "Some extra Credits for you and the person that brought you to us.": "Some extra Credits for you and the person that brought you to us.",
   "Weekly Watch Reward": "Weekly Watch Reward",
   "%SITE_NAME% view reward": "%SITE_NAME% view reward",
-  "You earned %lbc% for looking at neat stuff. ": "You earned %lbc% for looking at neat stuff. ",
-  "Earn a random reward of at least %lbc% for watching anything at all.": "Earn a random reward of at least %lbc% for watching anything at all.",
-  "You have already claimed this reward within the last 24 hours.": "You have already claimed this reward within the last 24 hours.",
-  "Please watch some content to earn this reward.": "Please watch some content to earn this reward.",
+  "You earned %lbc% for looking at neat stuff this week.": "You earned %lbc% for looking at neat stuff this week.",
+  "You have already claimed this reward within the last week.": "You have already claimed this reward within the last week.",
+  "You only watched content for %1% days in the last week. It needs to be at least %2% to get the reward.": "You only watched content for %1% days in the last week. It needs to be at least %2% to get the reward.",
   "You will receive an SMS text message confirming your phone number is valid. May not be available in all regions.": "You will receive an SMS text message confirming your phone number is valid. May not be available in all regions.",
   "Verified accounts are eligible to earn LBRY Credits for views, watching and reposting videos, sharing invite links etc. Verifying also helps us keep the %SITE_NAME% community safe too! %Refresh% or %Skip%.": "Verified accounts are eligible to earn LBRY Credits for views, watching and reposting videos, sharing invite links etc. Verifying also helps us keep the %SITE_NAME% community safe too! %Refresh% or %Skip%.",
   "Your First Nickel": "Your First Nickel",
@@ -2257,5 +2260,6 @@
   "Still Valid Until": "Still Valid Until",
   "Membership Period Options": "Membership Period Options",
   "%yearly_cost% USD For A One Year Membership (%monthly_cost% Per Month)": "%yearly_cost% USD For A One Year Membership (%monthly_cost% Per Month)",
+  "Active channel": "Active channel",
   "--end--": "--end--"
 }
