Beautify FYP toast

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2166,7 +2166,8 @@
   "Remove all unavailable claims": "Remove all unavailable claims",
   "Recommended For You": "Recommended For You",
   "Recommended": "Recommended",
-  "Recommendation removed. Thanks for the feedback!": "Recommendation removed. Thanks for the feedback!",
+  "Recommendation removed.!": "Recommendation removed.",
+  "Thanks for the feedback!": "Thanks for the feedback!",
   "Hide Chat": "Hide Chat",
   "Popout Chat": "Popout Chat",
   "Chat Hidden": "Chat Hidden",
