i18n: typos and removal

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1075,8 +1075,6 @@
   "Save": "Save",
   "Saved": "Saved",
   "Saving...": "Saving...",
-  "Thanks for the feedback! You help make the app better for everyone.": "Thanks for the feedback! You help make the app better for everyone.",
-  "Thanks for the feedback. Mark has been notified and is currently walking over to his computer to work on this.": "Thanks for the feedback. Mark has been notified and is currently walking over to his computer to work on this.",
   "Changelog": "Changelog",
   "Boost your content": "Boost your content",
   "Boost This Video": "Boost This Video",
@@ -1099,7 +1097,6 @@
   "Add a Card": "Add a Card",
   "To Tip Creators": "To Tip Creators",
   "Show this channel your appreciation by sending a donation of Credits. ": "Show this channel your appreciation by sending a donation of Credits. ",
-  "Buy more LBRY Credits": "Buy more LBRY Credits",
   "Buy or swap more LBRY Credits": "Buy or swap more LBRY Credits",
   "Buy or Swap": "Buy or Swap",
   "Support This %claimTypeText%": "Support This %claimTypeText%",
@@ -2164,9 +2161,8 @@
   "Streamer": "Streamer",
   "Pinned": "Pinned",
   "Remove all unavailable claims": "Remove all unavailable claims",
-  "Recommended For You": "Recommended For You",
   "Recommended": "Recommended",
-  "Recommendation removed.!": "Recommendation removed.",
+  "Recommendation removed.": "Recommendation removed.",
   "Thanks for the feedback!": "Thanks for the feedback!",
   "Hide Chat": "Hide Chat",
   "Popout Chat": "Popout Chat",
