Disable image CDN due to instability

--- a/.env.defaults
+++ b/.env.defaults
@@ -17,8 +17,8 @@ SEARCH_SERVER_API=https://lighthouse.odysee.tv/search
 SOCKETY_SERVER_API=wss://sockety.odysee.com/ws
 RECSYS_ENDPOINT=https://recsys.odysee.tv/v1/lvv
 RECSYS_FYP_ENDPOINT=https://recsys.odysee.tv/v1/u
-IMAGE_PROXY_URL=https://boost.vanwanet.com/index.php
-THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
+#   IMAGE_PROXY_URL=https://boost.vanwanet.com/index.php
+#   THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
 THUMBNAIL_CARDS_CDN_URL=https://cards.odycdn.com/
 LOCALE_API=https://api.odysee.com/legal/requirements
 THUMBNAIL_HEIGHT=220
