--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2293,5 +2293,13 @@
   "%free% of %total% available": "%free% of %total% available",
   "Short (< 4 min)": "Short (< 4 min)",
   "Medium (4 - 20 min)": "Medium (4 - 20 min)",
+  "Rename List": "Rename List",
+  "New Name": "New Name",
+  "Rename": "Rename",
+  "New Collection Name": "New Collection Name",
+  "In %collection%": "In %collection%",
+  "Add to %collection%": "Add to %collection%",
+  "Show this channel your appreciation by sending a donation of Credits. ": "Show this channel your appreciation by sending a donation of Credits. ",
+  "%action% %collection%": "%action% %collection%",
   "--end--": "--end--"
 }
