Consolidate transaction result strings
## Issue
Accumulation of so many strings for a "successful tip" that it is getting annoying to re-translate them for minor changes.

## Change
- Consolidate and re-use strings.
- Make the tip string currency-agnostic so we don't have to touch it again. The amount and currency is moved to the `subMessage`.
- Fix spacing being incorrectly enforced through i18n (it should be done via code/css).

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -861,13 +861,6 @@
   "Insufficient credits": "Insufficient credits",
   "Error abandoning your claim/support": "Error abandoning your claim/support",
   "Error unlocking your tip": "Error unlocking your tip",
-  "You deposited %lbc% as a support!": "You deposited %lbc% as a support!",
-  "You deposited %amount% LBRY Credits as a support!": "You deposited %amount% LBRY Credits as a support!",
-  "You sent $%amount% as a tip to %tipChannelName%, I'm sure they appreciate it!": "You sent $%amount% as a tip to %tipChannelName%, I'm sure they appreciate it!",
-  "You sent %tipAmount% LBRY Credits as a tip to %tipChannelName%, I'm sure they appreciate it!": "You sent %tipAmount% LBRY Credits as a tip to %tipChannelName%, I'm sure they appreciate it!",
-  "You sent %lbc% as a tip, Mahalo!": "You sent %lbc% as a tip, Mahalo!",
-  "You sent %amount% LBRY Credits as a tip, Mahalo!": "You sent %amount% LBRY Credits as a tip, Mahalo!",
-  "You sent %amount% LBRY Credits": "You sent %amount% LBRY Credits",
   "No stats found": "No stats found",
   "Sorry about that. Contact %SITE_HELP_EMAIL% if you continue to have issues.": "Sorry about that. Contact %SITE_HELP_EMAIL% if you continue to have issues.",
   "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.": "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.",
@@ -1028,6 +1021,10 @@
   "To address: ": "To address: ",
   "Confirm Transaction": "Confirm Transaction",
   "Once the transaction is sent, it cannot be reversed.": "Once the transaction is sent, it cannot be reversed.",
+  "Sending": "Sending",
+  "From": "From",
+  "Only creators that verify cash accounts can receive tips": "Only creators that verify cash accounts can receive tips",
+  "Amount must be at least one dollar": "Amount must be at least one dollar",
   "Update Your Password": "Update Your Password",
   "Your Wallet is Empty": "Your Wallet is Empty",
   "Buy Credits": "Buy Credits",
@@ -1068,19 +1065,12 @@
   "Send a $%displayAmount% Tip": "Send a $%displayAmount% Tip",
   "Send a %displayAmount% Credit Tip": "Send a %displayAmount% Credit Tip",
   "Boost": "Boost",
-  "Boosting": "Boosting",
-  "Tipping Credit": "Tipping Credit",
-  "Tipping Fiat (USD)": "Tipping Fiat (USD)",
-  "Send Revocable Support": "Send Revocable Support",
-  "Send a %amount% Tip": "Send a %amount% Tip",
-  "Channel to show support as": "Channel to show support as",
-  "This refundable boost will improve the discoverability of this %claimTypeText% while active. ": "This refundable boost will improve the discoverability of this %claimTypeText% while active. ",
-  "Show this channel your appreciation by sending a donation in USD. ": "Show this channel your appreciation by sending a donation in USD. ",
+  "Boost transaction successful.": "Boost transaction successful.",
   "Boost transaction failed.": "Boost transaction failed.",
+  "Tip successfully sent. I'm sure they appreciate it!": "Tip successfully sent. I'm sure they appreciate it!",
   "Tip transaction failed.": "Tip transaction failed.",
   "Add a Card": "Add a Card",
   "To Tip Creators": "To Tip Creators",
-  "Show this channel your appreciation by sending a donation of Credits. ": "Show this channel your appreciation by sending a donation of Credits. ",
   "Buy or swap more LBRY Credits": "Buy or swap more LBRY Credits",
   "Buy or Swap": "Buy or Swap",
   "Support This %claimTypeText%": "Support This %claimTypeText%",
@@ -1904,7 +1894,7 @@
   "Create or Schedule a New Stream": "Create or Schedule a New Stream",
   "You can upload your own recording or select a replay when your stream is over": "You can upload your own recording or select a replay when your stream is over",
   "Edit / Update": "Edit / Update",
-  "This channel isn't staking enough Credits for inline image previews.": "This channel isn't staking enough Credits for inline image previews.",
+  "Odysee Premium required to enable image previews": "Odysee Premium required to enable image previews",
   "This channel isn't staking enough Credits for link previews.": "This channel isn't staking enough Credits for link previews.",
   "Latest": "Latest",
   "Channel Not Found": "Channel Not Found",
@@ -1979,9 +1969,7 @@
   "System": "System",
   "Supporting content requires %lbc%": "Supporting content requires %lbc%",
   "With %lbc%, you can send tips to your favorite creators, or help boost their content for more people to see.": "With %lbc%, you can send tips to your favorite creators, or help boost their content for more people to see.",
-  "Show this channel your appreciation by sending a donation in USD.": "Show this channel your appreciation by sending a donation in USD.",
   "This refundable boost will improve the discoverability of this %claimTypeText% while active.": "This refundable boost will improve the discoverability of this %claimTypeText% while active.",
-  "Show this channel your appreciation by sending a donation of Credits.": "Show this channel your appreciation by sending a donation of Credits.",
   "Add card to tip creators in USD": "Add card to tip creators in USD",
   "Add a credit card to tip creators in their local currency.": "Add a credit card to tip creators in their local currency.",
   "Add Card": "Add Card",
@@ -2132,6 +2120,7 @@
   "Scheduled streams hidden, you can re-enable them in settings.": "Scheduled streams hidden, you can re-enable them in settings.",
   "Customize Homepage": "Customize Homepage",
   "Customize --[Short label for \"Customize Homepage\"]--": "Customize",
+  "This is currently an early-access feature for Premium members.": "This is currently an early-access feature for Premium members.",
   "Sort and customize your homepage": "Sort and customize your homepage",
   "Clean as a whistle! --[title for empty homepage]--": "Clean as a whistle!",
   "Hidden": "Hidden",
