livestream for all

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2178,7 +2178,7 @@
   "Expand to learn more about how Odysee Premium works": "Expand to learn more about how Odysee Premium works",
   "Get More Information": "Get More Information",
   "First of all, thank you for considering or purchasing a membership, it means a ton to us! A few important details to know:": "First of all, thank you for considering or purchasing a membership, it means a ton to us! A few important details to know:",
-  "Exclusive and early access features include: recommended content on homepage, livestreaming, and the ability to post Odysee hyperlinks + images in comments. Account is also automatically eligible for Rewards. More to come later.": "Exclusive and early access features include: recommended content on homepage, livestreaming, and the ability to post Odysee hyperlinks + images in comments. Account is also automatically eligible for Rewards. More to come later.",
+  "Exclusive and early access features include: recommended content, homepage customization, and the ability to post Odysee hyperlinks + images in comments. Account is also automatically eligible for Rewards. More to come later.": "Exclusive and early access features include: recommended content, homepage customization, and the ability to post Odysee hyperlinks + images in comments. Account is also automatically eligible for Rewards. More to come later.",
   "The yearly Premium+ membership has a discount compared to monthly, and Premium is only available yearly.": "The yearly Premium+ membership has a discount compared to monthly, and Premium is only available yearly.",
   "These are limited time rates, so get in early!": "These are limited time rates, so get in early!",
   "There may be higher tiers available in the future for creators and anyone else who wants to support us.": "There may be higher tiers available in the future for creators and anyone else who wants to support us.",
@@ -2195,8 +2195,8 @@
   "early access": "early access",
   "site-wide badge": "site-wide badge",
   "Available Memberships": "Available Memberships",
-  "Badge on profile, livestreaming, automatic rewards confirmation, and early access to new features": "Badge on profile, livestreaming, automatic rewards confirmation, and early access to new features",
-  "Badge on profile, livestreaming, automatic rewards confirmation, early access to new features, and no ads": "Badge on profile, livestreaming, automatic rewards confirmation, early access to new features, and no ads",
+  "Badge on profile, automatic rewards confirmation, and early access to new features": "Badge on profile, automatic rewards confirmation, and early access to new features",
+  "Badge on profile, automatic rewards confirmation, early access to new features, and no ads": "Badge on profile, automatic rewards confirmation, early access to new features, and no ads",
   "Join via %interval% membership": "Join via %interval% membership",
   "Interval": "Interval",
   "Your Active Memberships": "Your Active Memberships",
