fixes from review
remove config, remove unused app strings + add new, add disabled message

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1706,7 +1706,6 @@
   "People who view this link will be redirected to your livestream. Make sure to use this for sharing so your title and thumbnail are displayed properly.": "People who view this link will be redirected to your livestream. Make sure to use this for sharing so your title and thumbnail are displayed properly.",
   "View livestream": "View livestream",
   "You need to upload your livestream details before you can go live. Please note: Replays must be published manually after your stream via the Update button on the livestream.": "You need to upload your livestream details before you can go live. Please note: Replays must be published manually after your stream via the Update button on the livestream.",
-  "To stream on Odysee, please join Odysee Premium or have 50 Credits as support on your channel": "To stream on Odysee, please join Odysee Premium or have 50 Credits as support on your channel",
   "Join Odysee Premium": "Join Odysee Premium",
   "Create A Livestream": "Create A Livestream",
   "Go Live on Odysee": "Go Live on Odysee",
@@ -2229,5 +2228,6 @@
   "Canceled On": "Canceled On",
   "Still Valid Until": "Still Valid Until",
   "Active channel": "Active channel",
+  "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.": "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.",
   "--end--": "--end--"
 }
