Catch up on string changes

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1983,6 +1983,7 @@
   "Manage Card": "Manage Card",
   "Card Details": "Card Details",
   "Remove Card": "Remove Card",
+  "Currency To Use": "Currency To Use",
   "Sorry, there was an error in processing your payment!": "Sorry, there was an error in processing your payment!",
   "Congratulations! Your account has been connected with Odysee.": "Congratulations! Your account has been connected with Odysee.",
   "Although your account is connected it still requires verification to begin receiving tips.": "Although your account is connected it still requires verification to begin receiving tips.",
@@ -2202,7 +2203,7 @@
   "You currently have no active memberships": "You currently have no active memberships",
   "Canceled Memberships": "Canceled Memberships",
   "You currently have no canceled memberships": "You currently have no canceled memberships",
-  "You are purchasing a %monthly_yearly% %plan% membership that is active immediately and will renew %monthly_yearly% at a price of %price%.": "You are purchasing a %monthly_yearly% %plan% membership that is active immediately and will renew %monthly_yearly% at a price of %price%.",
+  "You are purchasing a %monthly_yearly_bolded% %plan% membership that is active immediately and will renew %monthly_yearly% at a price of %price%.": "You are purchasing a %monthly_yearly_bolded% %plan% membership that is active immediately and will renew %monthly_yearly% at a price of %price%.",
   "monthly": "monthly",
   "yearly": "yearly",
   "You can cancel Premium at any time (no refunds) and you can also close this window and choose a different membership option.": "You can cancel Premium at any time (no refunds) and you can also close this window and choose a different membership option.",
@@ -2223,13 +2224,10 @@
   "You are cancelling your Odysee Premium. You will still have access to all the paid features until the point of the expiration of your current membership, at which point you will not be charged again and your membership will no longer be active. At this time, there is no way to subscribe to another membership if you cancel and there are no refunds.": "You are cancelling your Odysee Premium. You will still have access to all the paid features until the point of the expiration of your current membership, at which point you will not be charged again and your membership will no longer be active. At this time, there is no way to subscribe to another membership if you cancel and there are no refunds.",
   "Sorry, there was an error, please contact support or try again later": "Sorry, there was an error, please contact support or try again later",
   "Please save a card as a payment method so you can join Odysee Premium": "Please save a card as a payment method so you can join Odysee Premium",
-  "After the card is added, click Back": "After the card is added, click Back",
   "Registered On": "Registered On",
   "Auto-Renews On": "Auto-Renews On",
   "Canceled On": "Canceled On",
   "Still Valid Until": "Still Valid Until",
-  "Membership Period Options": "Membership Period Options",
-  "%yearly_cost% USD For A One Year Membership (%monthly_cost% Per Month)": "%yearly_cost% USD For A One Year Membership (%monthly_cost% Per Month)",
   "Active channel": "Active channel",
   "--end--": "--end--"
 }
